nexnum-app/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexnum-service
  namespace: default
spec:
  selector:
    app: nexnum-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
